--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <script async
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDyFusSukxdlj8Nlonn7qkIFkz5N8jFhX0&callback=initMap">
+            src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap">
     </script>
     <script
             type="text/javascript"
