--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,8 @@
       content="Web site created using create-react-app"
     />
     <script async
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDyFusSukxdlj8Nlonn7qkIFkz5N8jFhX0&callback=initMap">
+            src="https://maps.googleapis.com/maps/api/js?key=개인키넣어주셈&callback=initMap">
     </script>
-    <script
-            type="text/javascript"
-            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4755be2274b0f534aae434a5dfe21164&libraries=services,clusterer"
-    ></script>
     <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
