--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
+    </style>
     <script
             type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4755be2274b0f534aae434a5dfe21164&libraries=services,clusterer"
